Latest works, Footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href="about.css" rel="stylesheet">
         <link href="skills.css" rel="stylesheet">
         <link href="experience.css" rel="stylesheet">
+        <link href="work.css" rel="stylesheet">
         <link
             href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
             rel="stylesheet">
@@ -153,10 +154,76 @@
                         </div>
                     </div>
                 </div>
+                <div class="work-section">
+                    <h2 class="general-heading">Latest works</h2>
+                    <div class="work-list-section">
+                        <div class="work-list">
+                            <div class="work-row">
+                                <div class="work-col-left">
+                                    <section>
+                                        <h3 class="work-title">Tripy mobile app</h3>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem
+                                            maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis
+                                            efficitur mauris tristique efficitur. Aliquam rhoncus sem sed
+                                            ullamcorper venenatis. Aenean malesuada eu orci non sodales. </p>
+                                        <a href="#" class="button">Details</a>
+                                    </section>
+                                </div>
+                                <div class="work-col-right">
+                                    <figure><img src="image/work1.png"></figure>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="work-list">
+                            <div class="work-row">
+                                <div class="work-col-left">
+                                    <section>
+                                        <h3 class="work-title">Hello mobile app</h3>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem
+                                            maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis
+                                            efficitur mauris tristique efficitur. Aliquam rhoncus sem sed
+                                            ullamcorper venenatis. Aenean malesuada eu orci non sodales. </p>
+                                        <a href="#" class="button">Details</a>
+                                    </section>
+                                </div>
+                                <div class="work-col-right">
+                                    <figure><img src="image/work2.png"></figure>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="work-list">
+                            <div class="work-row">
+                                <div class="work-col-left">
+                                    <section>
+                                        <h3 class="work-title">Cute cookies app</h3>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem
+                                            maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis
+                                            efficitur mauris tristique efficitur. Aliquam rhoncus sem sed
+                                            ullamcorper venenatis. Aenean malesuada eu orci non sodales. </p>
+                                        <a href="#" class="button">Details</a>
+                                    </section>
+                                </div>
+                                <div class="work-col-right">
+                                    <figure><img src="image/work3.png"></figure>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-
         </main>
+        <footer class="footer">
+            <div class="container">
+                <section>
+                    <span>Stay in touch</span>
+                    <h4>Ready to talk?</h4>
+                    <p>Feel free to contact us</p>
+                    <a href="#" class="button">Lets Talk</a>
+                </section>
+                <span class="copyright">© 2022 All rights reserved. Free minimal bootstrap template by <a
+                        href="https://designstub.com/" target="_blank">Designstub</a>.</span>
+            </div>
+        </footer>
     </body>
 
 </html>
